--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,7 @@
     />
     <link
     href="//db.onlinewebfonts.com/c/c68e21ad1a10803b1ef491fd0392b067?family=SB+Sans+Text"
-    rel="stylesheet" type="text/css"/
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    rel="stylesheet" type="text/css"/ />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
